Fix display issue on firefox

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -19,6 +19,7 @@ body {
   font-kerning: normal;
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
 }
 
 /**
